clear canvas not fixed rest working

--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
+    <div class="container">
       <h2>Score</h2><label id="score" > Testing</label>
-      <br>
       <canvas id="canvas" width="802" height="702"></canvas>
-
+    </div>
     <script src="script.js"></script>
 
   </body>
