--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div id="c1button" class="color1 button"></div>
+    <div id="c2button" class="color2 button"></div>
+    <div id="c3button" class="color3 button"></div>
+    <div id="c4button" class="color4 button"></div>
     <div class="container">
       <h2>Score</h2><label id="score" > Testing</label>
       <canvas id="canvas" width="802" height="702"></canvas>
