--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h3 id="playagain">Press "Space Bar" or Click here to play again</h3>
     </div>
     <footer>
-      <h4><a href="https://github.com/mohdsauood">Created By<span> Mohamed Sauood</span></a></h4>
+      <h4><a href="#">Created By<span> Mohamed Sauood</span></a></h4>
     </footer>
     <script src="script.js"></script>
 
