--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>Snake</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -20,6 +21,9 @@
       <h2>Score </h2><label id="score" > Testing</label>
       <canvas id="canvas" width="802" height="702"></canvas>
       <h3 id="playagain">Press "Space Bar" or Click here to play again</h3>
+    </div>
+    <div class="mobile-message">
+      <h3>Sorry ! This Game is not Developed for Mobile phones</h3>
     </div>
     <footer>
       <h4><a href="#">Created By<span> Mohamed Sauood</span></a></h4>
